--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "dependencies": {
     "cwd": "^0.10.0",
-    "testcontainers": "9.0.0"
+    "testcontainers": "^10.3.2"
   },
   "peerDependencies": {
     "jest-environment-node": ">=25"
