--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blueground/jest-testcontainers",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Jest preset for starting docker containers that stay up whilist your tests run.",
   "main": "dist/index",
   "types": "dist/index",
@@ -12,7 +12,7 @@
     "remove:dist": "rm -rf dist",
     "build": "npm run remove:dist && tsc",
     "test": "jest",
-    "lint": "tslint --fix src/**/*.ts",
+    "lint": "eslint --fix src/**/*.ts",
     "prettier": "prettier --write src/**/*.ts",
     "style:fix": "npm run lint && npm run prettier",
     "prepublish": "npm run build",
@@ -22,7 +22,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "tslint --fix",
+      "eslint --fix",
       "prettier --write"
     ]
   },
@@ -49,25 +49,31 @@
   },
   "homepage": "https://github.com/bluegroundltd/jest-testcontainers#readme",
   "devDependencies": {
-    "@types/cwd": "^0.10.0",
-    "@types/dockerode": "^3.3.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.5",
-    "@types/redis": "^2.8.20",
-    "husky": "^4.3.8",
-    "jest": "^27.5.1",
-    "lint-staged": "^10.2.2",
-    "prettier": "^1.19.1",
-    "redis": "^3.1.2",
-    "ts-jest": "^27.1.5",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.8.4"
+    "@eslint/js": "^9.30.1",
+    "@types/cwd": "0.10.2",
+    "@types/dockerode": "3.3.42",
+    "@types/jest": "30.0.0",
+    "@types/node": "22.13.14",
+    "@types/redis": "2.8.20",
+    "@types/ssh2": "1.15.5",
+    "@typescript-eslint/eslint-plugin": "8.36.0",
+    "@typescript-eslint/parser": "8.36.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jsdoc": "^51.3.4",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "husky": "9.1.7",
+    "jest": "30.0.4",
+    "lint-staged": "16.1.2",
+    "prettier": "3.6.2",
+    "redis": "5.6.0",
+    "ts-jest": "29.4.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
     "cwd": "^0.10.0",
-    "testcontainers": "^10.3.2"
+    "testcontainers": "11.2.1"
   },
   "peerDependencies": {
     "jest-environment-node": ">=25"
